[package]
name = "reverber"
version = "0.1.0"
authors = ["jude <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["process", "io-util"] }
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-http = "2.0.0"
actix-files = "0.3.0"
dotenv = "0.15.0"
tera = "1.5.0"
serde = "1.0.116"
base64 = "0.13.0"
env_logger = "0.7.1"
bytes = "0.5.6"
futures = "0.3.6"
